--- a/.env
+++ b/.env
@@ -24,3 +24,4 @@ APP_ENV=dev
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 ###< doctrine/doctrine-bundle ###
+DATABASE_URL=
